Bug 388723: Make the browser wrap comments on display in addition to the normal wrapping, to support CJK languages that have no spaces. Patch By Max Kanat-Alexander <mkanat@bugzilla.org> r=glob, a=mkanat

--- a/skins/standard/IE-fixes.css
+++ b/skins/standard/IE-fixes.css
@@ -13,6 +13,11 @@
   * Contributor(s): Marc Schumann <wurblzap@gmail.com>
   */
 
+.bz_comment_text {
+     white-space: pre;
+     word-wrap: break-word;
+}
+
 #footer #useful-links li {
     padding-bottom: 0.8ex;
 }
